<resources>
    <string name="app_name">contacts</string>
    <string name="button">Button</string>
    <string name="username">Username</string>
    <string name="login_button">Login</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="search">Search</string>
    <string name="empty_contacts">Empty</string>
    <string name="user_data_preference_file_key" translatable="false">me.rekii.contacts.USERDATA</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="delete">Delete</string>
    <string name="extra_key_person" translatable="false">EXTRA_PERSON</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="delete_user">Delete user</string>
    <string name="change_password">Change password</string>
    <string name="me.rekii.contacts.EXTRA_USERNAME" translatable="false">EXTRA_USERNAME</string>
    <string name="password_incorrect">The password is incorrect</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
</resources>